crates/id_effect/tests/ui/effect_concrete_env.stderr
error[E0599]: no function or associated item named `provide` found for struct `id_effect::Effect<A, E, R>` in the current scope
 --> tests/ui/effect_concrete_env.rs:3:65
  |
3 |   let _: fn(id_effect::Effect<(), (), ()>) = id_effect::Effect::provide;
  |                                                                 ^^^^^^^ function or associated item not found in `id_effect::Effect<_, _, _>`
